[package]
name = "playground"
version = "0.1.0"
authors = ["Ruben S. Montero <rsmontero@opennebula.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.22.1"
strum = "0.21"
strum_macros = "0.21"
base64 = "0.13.0"
